infra/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-pod
  template:
    metadata:
        labels:
          app: auth-pod
    spec:
      containers:
        - name: auth-container
          image: devbasanta/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  selector:
    app: auth-pod
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
