infra/k8s/client-deployment-cluster-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-pod
  template:
    metadata:
        labels:
          app: client-pod
    spec:
      containers:
        - name: client-container
          image: devbasanta/client

---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  selector:
    app: client-pod
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
