infra/k8s/tickets-deployment-cluster-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-pod
  template:
    metadata:
      labels:
        app: tickets-pod
    spec:
      containers:
        - name: tickets-container
          image: devbasanta/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-cluster-ip-service
spec:
  selector:
    app: tickets-pod
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
